<resources>
    <string name="facebook_app_id">193614721005020</string>
    <string name="app_name">ex_seat</string>

    <string name="app_page1"> Workout</string>
    <string name="app_page2"> History</string>
    <string name="item_subtitle">Total Max RPM:</string>
    <string name="item_avgtitle">Average:</string>
    <string name="app_page3"> Profile</string>
    <string name="app_page4"> LeaderBoard</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear Data</string>
    <string name="action_return">return</string>
    <string name="action_exit">Exit</string>
    <string name="button_send">Say something</string>
    <string name="button_start">Start</string>
    <string name="button_login">Tweebaa User</string>
    <string name="button_join">Join Now</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_forgot">Forgot Password?</string>
    <string name="button_name1">Stop Calculating</string>
    <string name="button_name2">Start Calculating</string>
    <string name="button_name3">Connect Bluetooth</string>
    <string name="button_name4">Disconnect Bluetooth</string>
    <string name="default_message">Click button below!</string>
    <string name="interact_message">You just clicked on the Button!</string>
    <string name="r_min">×100 r/Min</string>
    <string name="Req_URL">http://67.224.94.82/mobileApp</string>
    <string name="Design_Total">/CollageAPI.ashx?action=load_publish_total</string>
    <string name="Req_PostAPI">/UCAPI.ashx</string>
    <string name="Param_Login">username =%1$s&amp;Password =%2$s</string>
    <string name="Param_Signup">username =%1$s&amp;user =%2$s&amp;Password =%3$s</string>
    <string name="calory">Calories Today</string>
    <string name="login">LOG IN</string>
    <string name="logout">LOG OUT</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="units">Units of Measure</string>
    <string name="title_activity_login">Sign in</string>

    <string name="signup_term"><a href="http://www.baidu.com">Terms of Use</a> and <a href="http://www.google.ca">Privacy Policy</a></string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_user">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeatpwd">Repeat Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_repeat_password">Again</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
