<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="4">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="B"
            android:id="@+id/buttonBack"
            android:layout_weight="1"
            android:background="#00ffffff"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/textLogin"
            android:textSize="28dp"
            android:layout_weight="9"
            android:gravity="center_horizontal"
            android:paddingRight="40dp"
            android:textColor="#ffffff"
            android:textIsSelectable="false" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_gravity="center_horizontal" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="2"
        android:id="@+id/popup_container">

        <FrameLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/boarder_style">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"

                        android:textIsSelectable="false"
                         />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                         />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_forgot"
                    android:id="@+id/buttonForgot"
                    android:textSize="16sp"
                    android:textColor="@android:color/holo_blue_light"
                    android:textStyle="bold"
                    style="@style/com_facebook_button"
                    android:background="#00ffffff"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_gravity="center" />

                <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/login"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@drawable/btnstyle"
                android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="OR"
                    android:id="@+id/textView6"
                    android:layout_gravity="center_horizontal"
                    android:textSize="14dp"
                    android:textIsSelectable="false"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/sign_up_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/button_join"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:background="@drawable/btnstyle"
                    android:textColor="@android:color/white" />


            </LinearLayout>
        </FrameLayout>
    </FrameLayout>

</LinearLayout>