<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/white"
    tools:context="com.example.ex_seat.MainActivity">

    <LinearLayout
        android:id="@+id/widget_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/hello_world"
            android:textSize="20sp" />
        
        <com.example.ex_seat.DashboardView
            android:id="@+id/dashboardView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:textColor="@drawable/lightred"
            
            app:bigSliceCount="8"
            app:headerRadius="50dp"
            app:headerTitle="RPM"
            app:maxValue="800"
            app:measureTextSize="8sp"
            app:radius="100dp"
            app:realTimeValue="100"
            app:startAngle="210"
            app:stripeWidth="10dp"
            app:stripeMode="normal"
            app:sweepAngle="120"/>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonBarStyle"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="0.07"
                
                android:text="@string/button_name1" />

            <Button
                android:id="@+id/button2"
                android:onClick="BTSwitch"
                style="?android:attr/buttonBarStyle"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="0.07"
                android:layout_width="100dp"
                android:text="@string/button_name3" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/chart_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/white"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">
    </LinearLayout>
    
</RelativeLayout>

