<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="35">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:layout_margin="5dp">

            <com.facebook.login.widget.ProfilePictureView
                android:id="@+id/profilePicture"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center_horizontal"
                facebook:com_facebook_preset_size="normal"
                android:layout_gravity="left|center_horizontal"
                android:paddingTop="20dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView_avantar"
                android:layout_gravity="center" />
        </FrameLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NoName"
                android:id="@+id/text_username"
                android:textSize="20dp"
                android:textColor="@android:color/black"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="35dp" />

        </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView_info"
        android:layout_gravity="center_horizontal"
        android:scrollIndicators="right"
        android:visibility="visible"
        android:layout_weight="16"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/spacer_medium"
            android:contextClickable="true"
            android:showDividers="middle|beginning|end">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="email"
                    android:id="@+id/textEmail"
                    android:layout_gravity="center_vertical"
                    android:textSize="18dp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="city"
                    android:id="@+id/textLocation"
                    android:layout_gravity="center_vertical"
                    android:textSize="18dp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:id="@+id/textGender"
                    android:layout_gravity="center_vertical"
                    android:textSize="18dp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="3" />

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:id="@+id/switch_gender"
                    android:layout_gravity="center_vertical|right"
                    android:layout_weight="1"
                    android:textOff="Male"
                    android:textOn="Female"
                    android:showText="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday"
                    android:id="@+id/textBirth"
                    android:layout_gravity="center_vertical"
                    android:textSize="18dp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:id="@+id/textHeight"
                    android:layout_gravity="center_vertical"
                    android:textSize="18dp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:id="@+id/textWeight"
                    android:layout_gravity="center_vertical"
                    android:textSize="18dp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/units"
                    android:id="@+id/units"
                    android:layout_gravity="center_vertical"
                    android:textSize="18dp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:id="@+id/switch_units"
                    android:layout_gravity="center_vertical|right"
                    android:layout_weight="1"
                    android:textOff="US"
                     />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/sign_out_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/logout"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@drawable/btnstyle"
        android:textColor="@android:color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:layout_marginBottom="15dp" />
</LinearLayout>